--- a/docs/cloud/integrations/alerts/ms-teams.mdx
+++ b/docs/cloud/integrations/alerts/ms-teams.mdx
@@ -124,8 +124,8 @@ Select a default channel for alerts, and set the suppression interval:
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
     <img
-      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719739673/Select_channel_and_alert_supression_jttahx.png"
-      alt="Select channel and supression interval"
+      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719739673/Select_channel_and_alert_suppression_jttahx.png"
+      alt="Select channel and suppression interval"
     />
   </div>
 </Frame>
