--- a/docs/cloud/integrations/alerts/slack.mdx
+++ b/docs/cloud/integrations/alerts/slack.mdx
@@ -71,7 +71,7 @@ Select a default channel for alerts, and set the suppression interval:
   <div className="dark:bg-white rounded-md p-4">
     <img
       src="https://res.cloudinary.com/diuctyblm/image/upload/v1719740639/Select_slack_channel_lcnhy3.png"
-      alt="Select Slack channel and alert supression"
+      alt="Select Slack channel and alert suppression"
     />
   </div>
 </Frame>
