--- a/docs/cloud/integrations/alerts/pagerduty.mdx
+++ b/docs/cloud/integrations/alerts/pagerduty.mdx
@@ -31,7 +31,7 @@ Those enrichments are used for filtering alerts only.
 
 ## Enabling PagerDuty alerts
 
-Go to the `Envronments` page using the sidebar:
+Go to the `Environments` page using the sidebar:
 
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
