--- a/docs/cloud/integrations/alerts/pagerduty.mdx
+++ b/docs/cloud/integrations/alerts/pagerduty.mdx
@@ -37,7 +37,7 @@ Go to the `Environments` page using the sidebar:
   <div className="dark:bg-white rounded-md p-4">
     <img
       src="https://res.cloudinary.com/diuctyblm/image/upload/v1719556083/set_up_pagerduty_screenshot_flbrdl.png"
-      alt="Environemnts"
+      alt="Environmnts"
     />
   </div>
 </Frame>
