--- a/docs/resources/business-case-data-observability-platform.mdx
+++ b/docs/resources/business-case-data-observability-platform.mdx
@@ -1,6 +1,6 @@
 ---
 title: "When do I need a data observability platform?"
-sidebarTitle: "Elementary Cloud Platform"
+sidebarTitle: "When to add data observability"
 ---
 
 ## When do I need a data observability platform? 
