--- a/docs/_snippets/cloud/features.mdx
+++ b/docs/_snippets/cloud/features.mdx
@@ -25,7 +25,7 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
     Configure Elementary in code, or in UI for non-technical users and adding tests in bulk.
     The platform opens PRs to your repo, saving hours of tedious YAML edits.
   </Card>
-  <Card title="Test Recomendations">
+  <Card title="Test Recommendations">
     Coming soon!
   </Card>
 </CardGroup>
@@ -45,14 +45,14 @@ This includes investigating issues root cause and impact, communicating issues t
   </Card>
   <Card title="Actionable Alerts" href="/features/alerts-and-incidents/alerts-and-incidents-overview">
     Distribute highly configurable alerts to different channels and integrations. 
-    Automatically tag owners, and enable setting status and assignes at the alert level.  
+    Automatically tag owners, and enable setting status and assigns at the alert level.  
   </Card>
   <Card title="Automated Grouping">
     Different failures who relate to the same issue are grouped automatically to a single incident.
     This accelerates triage and response, and reduces alerts fautigue.  
   </Card>
   <Card title="Incident Management" href="/features/alerts-and-incidents/incident-management">
-    Manage all open incidents in a single interface, with clear view of status and assignes.
+    Manage all open incidents in a single interface, with clear view of status and assigns.
     Track historical incidents and high-level incidents metrics. 
   </Card>
 </CardGroup>
