--- a/docs/features/data-lineage/exposures-lineage.mdx
+++ b/docs/features/data-lineage/exposures-lineage.mdx
@@ -47,7 +47,7 @@ exposures:
 
 Elementary will automatically and continuously extend the column-level-lineage to the dashboard level of your data visualization tool.
 
-If your BI tool has it's own modeling layers (e.g. data sources in Tableu, Explores in Looker), these will also be included in the graph and colum lineage. 
+If your BI tool has it's own modeling layers (e.g. data sources in Tableu, Explores in Looker), these will also be included in the graph and column lineage. 
 
 <iframe
 width="700"
