--- a/docs/features/data-tests/data-tests-overview.mdx
+++ b/docs/features/data-tests/data-tests-overview.mdx
@@ -9,7 +9,7 @@ Elementary enables to vlaidate data and track results by leveraging dbt tests an
 This rich ecosystem of tests covers various use cases, and is widely adopted as a standard for data validations.
 Any custom dbt generic or singular test you develop will also be included.  
 
-Additionaly, users can create custom SQL tests in Elementary.
+Additionally, users can create custom SQL tests in Elementary.
 
 
 _🚧 Under construction 🚧_
