alert integrations pages

--- a/docs/_snippets/cloud/integrations/cards-groups/cloud-integrations-cards.mdx
+++ b/docs/_snippets/cloud/integrations/cards-groups/cloud-integrations-cards.mdx
@@ -18,6 +18,6 @@
 
 <Snippet file="cloud/integrations/cards-groups/code-repo-cards.mdx" />
 
-### Communication and collaboration
+### Alerts & incidents
 
 <Snippet file="cloud/integrations/cards-groups/alerts-destination-cards.mdx" />
