--- a/docs/features/data-lineage/lineage.mdx
+++ b/docs/features/data-lineage/lineage.mdx
@@ -3,6 +3,8 @@ title: End-to-End Data Lineage
 sidebarTitle: Lineage overview
 ---
 
+<Snippet file="cloud/cloud-feature-tag.mdx" />
+
 Elementary offers automated [Column Level Lineage](/features/column-level-lineage) functionality, enriched with the latest test and monitors results.
 It is built with usability and performance in mind. 
 The column-level lineage is built from the metadata of your data warehouse, and integrations with [BI tools]((/features/exposures-lineage#automated-bi-lineage)) such as Looker and Tableau.
