--- a/docs/cloud/integrations/alerts/pagerduty.mdx
+++ b/docs/cloud/integrations/alerts/pagerduty.mdx
@@ -2,23 +2,9 @@
 title: "PagerDuty"
 ---
 
-## What you can send alerts about
+Elementary's PagerDuty integration enables sending alerts when data issues happen.
 
-- Model run failures
-- Failures and/or warnings of dbt tests (including Elementary dbt package)
-- Failures and/or warnings Elementary Cloud test tests
-    - Automated volume tests
-    - Automated freshness tests
-- dbt source freshness failures
-
-## Enriching alerts
-
-You can enrich your alerts by adding properties to tests and models in your **`.yml`** files. The supported attributes are:
-
-- owner
-- tags
-
-Those enrichments are used for filtering alerts only.
+It is recommended to create [alert rules](/features/alerts-and-incidents/alert-rules) to filter and select the alerts that will create incidents in PagerDuty.
 
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
@@ -31,57 +17,18 @@ Those enrichments are used for filtering alerts only.
 
 ## Enabling PagerDuty alerts
 
-Go to the `Environments` page using the sidebar:
+1. Go to the `Environments` page on the sidebar.
 
-<Frame>
-  <div className="dark:bg-white rounded-md p-4">
-    <img
-      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719556083/set_up_pagerduty_screenshot_flbrdl.png"
-      alt="Environmnts"
-    />
-  </div>
-</Frame>
-
-Select an environment and click connect on the Connect incident management tool card:
+2. Select an environment and click connect on the `Connect incident management tool` card (second card), and select `PagerDuty`.
 
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
     <img
       src="https://res.cloudinary.com/diuctyblm/image/upload/v1719556084/pagerduty_connect_environment_nyfv6z.png"
       alt="Connect incident management tool"
+      width="500"
     />
   </div>
 </Frame>
 
-Select PagerDuty:
-
-<Frame>
-  <div className="dark:bg-white rounded-md p-4">
-    <img
-      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719556083/connect_incident_management_tool_y4gnut.png"
-      alt="Select PagerDuty"
-    />
-  </div>
-</Frame>
-
-## Configuring PagerDuty alert rules
-
-Elementary Cloud allows you to create rules that route your alerts. Each rule is a combination of a filter and a destination.
-
-<Frame>
-  <div className="dark:bg-white rounded-md p-4">
-    <img
-      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719556084/create_alert_pagerduty_wuymnn.png"
-      alt="Create PagerDuty alert rules in Elementary"
-    />
-  </div>
-</Frame>
-
-<Frame>
-  <div className="dark:bg-white rounded-md p-4">
-    <img
-      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719556084/alert_rules_pagerduty_qjfn4b.png"
-      alt="Active PagerDuty alert rule in Elementary"
-    />
-  </div>
-</Frame>
+3. `PagerDuty` will now be available as a destination on the [`alert rules`](/features/alerts-and-incidents/alert-rules) page. You can add rules to create PagerDuty incidents out of alerts who match your rule.
