Slack private message

--- a/docs/cloud/integrations/alerts/slack.mdx
+++ b/docs/cloud/integrations/alerts/slack.mdx
@@ -8,7 +8,7 @@ The alerts include rich context, and you can change the incident status and asss
 You can also create [alert rules](/features/alerts-and-incidents/alert-rules) to distribute alerts to different channels and destinations.
 
 <Frame>
-  <div className="dark:bg-white rounded-md p-4">
+  <div className="dark:bg-white rounded-md p-1">
     <img
       src="https://res.cloudinary.com/diuctyblm/image/upload/v1719740543/Slack_alert_screenshot_kbun9o.png"
       alt="Slack alert screenshot"
@@ -23,7 +23,7 @@ You can also create [alert rules](/features/alerts-and-incidents/alert-rules) to
 2. Select an environment and click connect on the `Connect messaging app` card (first card), and select `Slack`.
 
 <Frame>
-  <div className="dark:bg-white rounded-md p-4">
+  <div className="dark:bg-white rounded-md p-1">
     <img
       src="https://res.cloudinary.com/diuctyblm/image/upload/v1719739151/connect_messaging_app_v64m69.png"
       alt="Connect messaging app"
@@ -42,7 +42,7 @@ to sends all failures to this channel. Alerts on warnings are not sent by defaul
 </Note>
 
 <Frame>
-  <div className="dark:bg-white rounded-md p-4">
+  <div className="dark:bg-white rounded-md p-1">
     <img
       src="https://res.cloudinary.com/diuctyblm/image/upload/v1719740639/Select_slack_channel_lcnhy3.png"
       alt="Select Slack channel and alert suppression"
@@ -56,4 +56,14 @@ to sends all failures to this channel. Alerts on warnings are not sent by defaul
 
 If the channel you want to send alerts to is private (🔒), it will not appear in the channels dropdown on the onboarding or the alert rules screen. 
 
-You will need to invite the Elementary bot to the private channel by typing `@Elementary` in the channel and clicking to invite the bot in, and then it will apear in the UI.
+You will need to invite the Elementary bot to the private channel by typing `@Elementary` in the channel and clicking to invite the bot in, and then it will appear in the UI.
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719905442/private_channel_ra3phb.png"
+      alt="Add Elementary to private channel"
+      width="600"
+    />
+  </div>
+</Frame>
