--- a/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
+++ b/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
@@ -8,13 +8,14 @@ sidebarTitle: Alerts & incidents overview
 
 ### Alerts & incidents core functionality 
 
-- Alert distribution rules -
-- Incident status and assigne -
-- Owners and subscribers -
-- Alerts customization -
-
-- Group alerts to incidents -
-- Alerts supression -
+- **Alert distribution rules** -
+- **Incident status and assigne** -
+- **Severity** - 
+- **Tags** - 
+- **Owners and subscribers** -
+- **Alerts customization** -
+- **Group alerts to incidents** -
+- **Alerts suppression** -
 
 ### Supported alert integrations
 
