--- a/docs/cloud/integrations/alerts/slack.mdx
+++ b/docs/cloud/integrations/alerts/slack.mdx
@@ -32,7 +32,17 @@ You can also create [alert rules](/features/alerts-and-incidents/alert-rules) to
   </div>
 </Frame>
 
-4. Authorize the Elementary app for your workspace. This step may require a workspace admin approval.
+4. Authorize the Elementary app for your workspace. **This step may require a workspace admin approval.**
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719912214/slack-approve_ibapky.png"
+      alt="Select Slack channel and alert suppression"
+      width="400"
+    />
+  </div>
+</Frame>
 
 5. Select a default channel for alerts, and set the suppression interval.
 
