--- a/docs/cloud/integrations/alerts/ms-teams.mdx
+++ b/docs/cloud/integrations/alerts/ms-teams.mdx
@@ -120,8 +120,9 @@ to sends all failures to this channel. Alerts on warnings are not sent by defaul
 <Frame>
   <div className="dark:bg-white rounded-md p-1">
     <img
-      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719739673/Select_channel_and_alert_suppression_jttahx.png"
+      src="https://res.cloudinary.com/diuctyblm/image/upload/v1719906740/ms_teams_select_channel_and_suppression_vtbsks.png"
       alt="Select channel and suppression interval"
+width="800"
     />
   </div>
 </Frame>
