--- a/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
+++ b/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
@@ -8,11 +8,11 @@ sidebarTitle: Alerts & incidents overview
 Alerts and incidents in Elementary are designed to shorten your time to response and time to resolution when data issues occur.
 
 - **Alert** - Notification about an event that indicates a data issue.
-- **Incident** - A data issue that starts with an event, but can include several events grouped to an incident. An incident has a start time, status, assigne and end time. 
+- **Incident** - A data issue that starts with an event, but can include several events grouped to an incident. An incident has a start time, status, assignee and end time. 
 
 Alerts provide information and context for recipients to quickly triage, prioritize and resolve issues. 
 For collaboration and promoting ownership, alerts include owners and tags. 
-You can create distribution rules to route alers to the relevant people and channels, for faster response. 
+You can create distribution rules to route alerts to the relevant people and channels, for faster response. 
 
 An alert would either open a new incident, or be automatically grouped and added to an ongoing incident.
 From the alert itself, you can update the status and assignee of an incident. In the incidents management page,
@@ -21,7 +21,7 @@ you will be able to track all open and historical incidents, and get metrics on 
 ### Alerts & incidents core functionality 
 
 - **Alert distribution rules** - 
-- **Incident status and assigne** -
+- **Incident status and assignee** -
 - **Owners and subscribers** -
 - **Severity and tags** -
 - **Alerts customization** -
