--- a/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
+++ b/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
@@ -7,8 +7,8 @@ sidebarTitle: Alerts & incidents overview
 
 Alerts and incidents in Elementary are designed to shorten your time to response and time to resolution when data issues occur.
 
-- **Alert** - Notification about an event that indicates a data issue.
-- **Incident** - A data issue that starts with an event, but can include several events grouped to an incident. An incident has a start time, status, assignee and end time. 
+- **Alert -** Notification about an event that indicates a data issue.
+- **Incident -** A data issue that starts with an event, but can include several events grouped to an incident. An incident has a start time, status, assignee and end time. 
 
 Alerts provide information and context for recipients to quickly triage, prioritize and resolve issues. 
 For collaboration and promoting ownership, alerts include owners and tags. 
@@ -18,7 +18,7 @@ An alert would either open a new incident, or be automatically grouped and added
 From the alert itself, you can update the status and assignee of an incident. In the incidents management page,
 you will be able to track all open and historical incidents, and get metrics on the quality of your response.
 
-### Alerts & incidents core functionality 
+## Alerts & incidents core functionality 
 
 - **Alert distribution rules** - 
 - **Incident status and assignee** -
@@ -28,6 +28,6 @@ you will be able to track all open and historical incidents, and get metrics on 
 - **Group alerts to incidents** -
 - **Alerts suppression** -
 
-### Supported alert integrations
+## Supported alert integrations
 
 <Snippet file="cloud/integrations/cards-groups/alerts-destination-cards.mdx" />
